# reversi

./: .gitignore  AGENTS.md  HUMAN.md  NEW-UI.md  README.md  main.py  protocol.md  pyproject.toml
misc/: inspect_rust.py  test_rust_analyze.py
src/reversi/: main.py
src/reversi/cli/: duel.py
src/reversi/engine/: ai_player.py  base_engine.py  board.py  local_engine.py  metadata.py  minimax_engine.py  mock_engine.py  process_pool.py  registry.py  router_engine.py  rust_engine.py  trivial_engine.py
src/reversi/protocol/: constants.py  interface.py
src/reversi/ui/: __init__.py  app.py  controller.py  state.py  styles.py
src/reversi/ui-flet/: app.py
src/reversi/ui-flet/components/: controls.py  persistence.py
src/reversi/ui/components/: __init__.py  board.py  controls.py  engine_dialog.py  game_state_serializer.py  persistence.py  replay.py  scoreboard.py
