[project]
name = "reversi"
version = "0.1.0"
description = "Reversi game with AI engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6",
    "qasync",
    "rust-reversi",
]

[tool.ruff.lint]
ignore = ["E402", "E701", "E731", "F403", "F405"]

[tool.ty.src]
include = ["src", "misc"]
exclude = [".venv"]
